style: coloring website

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 </div>
                 <div class="col-12 col-lg-6 text-md-center text-lg-left">
                     <div class="slider-content">
-                        <h1 class="main-font text-uppercase"><span class="slider-text px-2"> Hello, I am </span> <span class="d-block text-yellow"> Arif Dwi Purwanto.</span></h1>
-                        <p class="pt-3 alt-font content-para">A versatile, hardworking individual, keeping up to date on the latest technologies and continually improving processes, willing to give a 
+                        <h1 class="main-font text-uppercase"><span class="slider-text px-2"> Hello, I am </span> <span class="d-block"><span class="text-orange">[</span><span class="text-blue">Arif Dwi Purwanto</span><span class="text-orange">]</span></span></h1>
+                        <p class="pt-3 alt-font content-para text-blue">A versatile, hardworking individual, keeping up to date on the latest technologies and continually improving processes, willing to give a 
                             total support to the company for meet or exceed a company's expectation to deliver high-quality software products with the experience and capability that i have. </p>
                     </div>
                 </div>
@@ -177,12 +177,12 @@
         <div class="container">
             <div class="row pb-5">
                 <div class="col-12 col-md-7 pl-md-0">
-                    <h3 class="main-font text-uppercase"><span class="text-yellow d-block"> Senior Backend Engineer & </span> <span> Tech Enthusiast </span></h3>
-                    <p class="py-2 alt-font">Delivering backend solutions with performance, scalability and maintainability in mind.</p>
+                    <h3 class="main-font text-uppercase"><span class="text-orange d-block"> Senior Backend Engineer & </span> <span class="text-blue"> Tech Enthusiast </span></h3>
+                    <p class="py-2 alt-font text-blue">Delivering backend solutions with performance, scalability and maintainability in mind.</p>
                 </div>
                 <div class="col-12 col-md-5 text-md-right pt-4 pt-md-0">
-                    <h2 class="m-0 text-yellow main-font"><span id="year-diff"></span>+</h2>
-                    <p class="alt-font">Years of Experience</p>
+                    <h2 class="m-0 text-orange main-font"><span id="year-diff"></span>+</h2>
+                    <p class="alt-font text-blue">Years of Experience</p>
                 </div>
             </div>
             <div class="row pt-md-3 skill-box">
@@ -191,64 +191,64 @@
                     <div class="row">
                         <!-- First Skill -->
                         <div class="col-12 col-md-6 text-center text-md-left pl-md-0">
-                            <h4 class="main-font text-yellow skill">PROGRAMMING LANGUAGES</h4>
-                            <p class="alt-font text-white mt-3" style="font-size: 14px;">Experienced in using modern programming languages to build backend services, data processing system and APIs. 
+                            <h4 class="main-font text-light-blue skill">PROGRAMMING LANGUAGES</h4>
+                            <p class="alt-font text-blue mt-3" style="font-size: 14px;">Experienced in using modern programming languages to build backend services, data processing system and APIs. 
                                 Strong foundation in Go and Java for server-side development, complemented by knowledge of HTML, PHP and Javascript for various application needs.</p>
                         </div>
                         <!-- Second Skill -->
                         <div class="col-12 col-md-6 pt-5 pt-md-0 pr-md-0 text-center text-md-left">
-                            <h4 class="main-font text-yellow skill">FRAMEWORKS & LIBRARIES</h4>
-                            <p class="alt-font text-white mt-3" style="font-size: 14px;">Proficient in using web frameworks to accelerate development, enforce clean architecture and support scalability. 
+                            <h4 class="main-font text-light-blue skill">FRAMEWORKS & LIBRARIES</h4>
+                            <p class="alt-font text-blue mt-3" style="font-size: 14px;">Proficient in using web frameworks to accelerate development, enforce clean architecture and support scalability. 
                                 Comfortable with Go frameworks like Fiber and Echo, PHP's Laravel for full-stack apps and Vue.js for frontend interactivity.</p>
                         </div>
                     </div>
                     <div class="row mt-5">
                         <!-- Third Skill -->
                         <div class="col-12 col-md-6 text-center text-md-left pl-md-0">
-                            <h4 class="main-font text-yellow skill">DEVOPS & CLOUD</h4>
-                            <p class="alt-font text-white mt-3" style="font-size: 14px;">Capable of managing code deployment pipelines, containerization, and cloud services. 
+                            <h4 class="main-font text-light-blue skill">DEVOPS & CLOUD</h4>
+                            <p class="alt-font text-blue mt-3" style="font-size: 14px;">Capable of managing code deployment pipelines, containerization, and cloud services. 
                                 Experience with Docker, CI/CD pipelines (GitLab CI, GitHub Actions), and using cloud platforms like GCP to deploy and monitor applications.</p>
                         </div>
                         <!-- Fourth Skill -->
                         <div class="col-12 col-md-6 pt-5 pt-md-0 text-center text-md-left pr-md-0">
-                            <h4 class="main-font text-yellow skill">ARCHITECTURE & PATTERN</h4>
-                            <p class="alt-font text-white mt-3" style="font-size: 14px;">Experienced in designing scalable and maintainable systems using proven architectural patterns. 
-                                Applied microservices, clean architecture, and hexagonal (ports & adapters) patterns in real-world projects to ensure separation of concerns, testability, and long-term maintainability.</p>
+                            <h4 class="main-font text-light-blue skill">ARCHITECTURE & PATTERN</h4>
+                            <p class="alt-font text-blue mt-3" style="font-size: 14px;">Experienced in designing scalable systems using proven architectural patterns. 
+                                Applied microservices, clean architecture, and hexagonal (ports & adapters) patterns for better modularity, testability and maintainability.</p>
                         </div>
                     </div>
 
                 </div>
                 <!-- Progress Bars -->
                 <div class="col-12 col-md-5 offset-md-1 text-left pr-md-0 bars-section">
-                    <h4 class="main-font text-yellow skill">TECHNICAL SKILLS</h4>
+                    <h4 class="main-font text-light-blue skill">TECHNICAL SKILLS</h4>
                     <ul class="progress-bar-side">
                         <!-- First Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Languages:</span> GO, Java, HTML, PHP, Javascript, VB6, VB.NET</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Languages:</strong> GO, Java, HTML, PHP, Javascript, VB6, VB.NET</p></h6>
                         </li>
                         <!-- Second Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Databases:</span> Postgres, MySQL, SQL Server, Oracle, Redis</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Databases:</strong> Postgres, MySQL, SQL Server, Oracle, Redis</p></h6>
                         </li>
                         <!-- Third Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Frameworks & Libraries:</span> Fiber, Echo, Code Igniter, Laravel, Spring Boot, Vue.js</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Frameworks & Libraries:</strong> Fiber, Echo, Code Igniter, Laravel, Spring Boot, Vue.js</p></h6>
                         </li>
                         <!-- Fourth Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Tools & Platforms:</span> Docker, Git, Google Cloud Platform, AWS</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Tools & Platforms:</strong> Docker, Git, Google Cloud Platform, AWS</p></h6>
                         </li>
                         <!-- Fifth Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">DevOps & Infrastructure:</span> CI/CD, Linux CLI, Containerization</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>DevOps & Infrastructure:</strong> CI/CD, Linux CLI, Containerization</p></h6>
                         </li>
                         <!-- Sixth Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Security:</span> JWT, OAuth2</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Security:</strong> JWT, OAuth2</p></h6>
                         </li>
                          <!-- Seventh Tech -->
-                        <li style="list-style-type: disc;">
-                            <h6 class="mb-0 text-capitalize mons-font"><span class="text-yellow">Messaging:</span> JSON, HTML, ISO-8583 (Financial Messaging)</h6>
+                        <li style="list-style-type: disc; color: rgb(8, 31, 92);">
+                            <h6 class="mb-0 text-capitalize"><p class="alt-font text-blue" style="font-size: 14px;"><strong>Messaging:</strong> JSON, HTML, ISO-8583 (Financial Messaging)</</h6>
                         </li>
                     </ul>
                 </div>
@@ -262,12 +262,12 @@
         <div class="container">
             <div class="row pb-5 heading-row">
                 <div class="col-12 col-md-7">
-                    <h3 class="main-font text-uppercase"><span class="text-yellow d-block text-uppercase"> My Career </span> <span> History & Timeline </span></h3>
-                    <p class="py-2 alt-font">Please look what I have done so far in my life.</p>
+                    <h3 class="main-font text-uppercase"><span class="text-orange d-block text-uppercase"> My Career </span> <span class="text-blue"> History & Timeline </span></h3>
+                    <p class="py-2 alt-font text-blue">Please look what I have done so far in my life.</p>
                 </div>
                 <div class="col-12 col-md-5 text-md-right pt-4 pt-md-0">
-                    <h2 class="m-0 text-yellow main-font"><span id="age"></span></h2>
-                    <p class="alt-font">Years Old</p>
+                    <h2 class="m-0 text-orange main-font"><span id="age"></span></h2>
+                    <p class="alt-font text-blue">Years Old</p>
                 </div>
             </div>
             <div class="row">
@@ -1093,7 +1093,7 @@
             <li><a class="social-icon" href="javascript:void(0)"><i class="fab fa-linkedin-in"></i> </a> </li>
         </ul>
     </div>
-    <span class="slider-copyright text-grey">© riff 2025.</span>
+    <span class="slider-copyright text-grey">© -riff- 2025.</span>
 </div>
 <!-- End Copyright -->
 
