--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
                                 <!-- Events -->
                                 <div class="events" style="width: 2200px;">
                                     <ol>
-                                        <li><a href="#" data-date="10/12/2023" style="left: 200px;">2010</a></li>
-                                        <li><a href="#" data-date="13/01/2024" style="left: 200px;">2013</a></li>
-                                        <li><a href="#" data-date="01/02/2024" style="left: 200px;">2013</a></li>
-                                        <li><a href="#" data-date="10/02/2024" class="older-event selected">2013</a></li>
-                                        <li><a href="#" data-date="21/03/2024" style="left: 200px;">2016</a></li>
-                                        <li><a href="#" data-date="01/05/2024" style="left: 200px;">2019</a></li>
-                                        <li><a href="#" data-date="21/05/2024" style="left: 200px;">2020</a></li>
-                                        <li><a href="#" data-date="11/06/2024" style="left: 200px;">2021</a></li>
+                                        <li><a href="#" data-date="10/12/2023" class="older-event selected"><span class="text-blue">2010</span></a></li>
+                                        <li><a href="#" data-date="13/01/2024" style="left: 200px;"><span class="text-blue">2013</span></a></li>
+                                        <li><a href="#" data-date="01/02/2024" style="left: 200px;"><span class="text-blue">2013</span></a></li>
+                                        <li><a href="#" data-date="10/02/2024" style="left: 200px;"><span class="text-blue">2013</span></a></li>
+                                        <li><a href="#" data-date="21/03/2024" style="left: 200px;"><span class="text-blue">2016</span></a></li>
+                                        <li><a href="#" data-date="01/05/2024" style="left: 200px;"><span class="text-blue">2019</span></a></li>
+                                        <li><a href="#" data-date="21/05/2024" style="left: 200px;"><span class="text-blue">2020</span></a></li>
+                                        <li><a href="#" data-date="11/06/2024" style="left: 200px;"><span class="text-blue">2021</span></a></li>
                                     </ol>
                                     <span class="filling-line" aria-hidden="true"></span>
                                 </div>
@@ -302,18 +302,18 @@
                         <!-- Timeline -->
                         <div class="events-content">
                             <ol>
-                                <li data-date="10/12/2023">
+                                <li class="selected" data-date="10/12/2023">
                                     <!-- Main Content Div -->
                                     <div class="col-12 pl-md-0">
                                         <div class="main-content text-uppercase">
-                                            <h4 class="text-yellow main-font font-weight-normal">16 Jul 2010 / Lumajang</h4>
-                                            <h2 class="main-font">I graduated from SMAN 2 Lumajang</h2>
+                                            <h4 class="text-blue main-font font-weight-normal">16 Jul 2010 / Lumajang</h4>
+                                            <h2 class="main-font text-light-blue">I graduated from SMAN 2 Lumajang</h2>
                                         </div>
                                     </div>
                                     <!-- Sub Content Div -->
                                     <div class="row align-items-center">
                                         <div class="sub-content">
-                                            <p>I completed my high school education in the Science track (IPA) at SMAN 2 Lumajang, where i developed a strong interest in mathematics and physics.</p>
+                                            <p class="text-blue">I completed my high school education in the Science track (IPA) at SMAN 2 Lumajang, where i developed a strong interest in mathematics and physics.</p>
                                         </div>
                                     </div>
                                 </li>
@@ -321,8 +321,8 @@
                                     <!-- Main Content Div -->
                                     <div class="col-12 pl-md-0">
                                         <div class="main-content text-uppercase">
-                                            <h4 class="text-yellow main-font font-weight-normal">28 Mar 2013 / Bandung</h4>
-                                            <h2 class="main-font">I completed internship at PT. POS Indonesia (Persero)</h2>
+                                            <h4 class="text-blue main-font font-weight-normal">28 Mar 2013 / Bandung</h4>
+                                            <h2 class="main-font text-light-blue">I completed internship at PT. POS Indonesia (Persero)</h2>
                                         </div>
                                     </div>
                                     <!-- Sub Content Div -->
@@ -330,7 +330,7 @@
                                         <div class="col-12 col-md-6 pl-md-0">
                                             <div class="sub-content">
                                                 <h5 class="text-uppercase main-font text-yellow">Major subjects</h5>
-                                                <p class="alt-font">During my internship at PT. POS Indonesia, i was responsible for developing and analyzing e-Office project. Later, i was transferred to the data center section, 
+                                                <p class="alt-font">During my internship at PT. POS Indonesia (Persero), i was responsible for developing and analyzing e-Office project. Later, i was transferred to the data center section, 
                                                     where i actively participated in the design process of the Data Center and Data Recovery Center. This experience allowed me to gain valuable insights into both software development and critical infrastructure planning.</p>
                                             </div>
                                         </div>
@@ -431,7 +431,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="selected" data-date="10/02/2024">
+                                <li data-date="10/02/2024">
                                     <!-- Main Content Div -->
                                     <div class="col-12 pl-md-0">
                                         <div class="main-content text-uppercase">
