style: alignment contact email

--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
                     <h3 class="main-font text-uppercase"><span class="text-orange d-block text-uppercase"> Contact Me </span> <span class="text-blue"> Lets Get In Touch </span></h3>
                     <p class="py-2 alt-font text-blue">I am available all the time for any project according to my skills.</p>
                 </div>
-                <div class="col-12 col-md-6 d-flex align-items-center justify-content-end text-md-right pt-4 pt-md-0">
+                <div class="col-12 col-md-6 d-flex align-items-center justify-content-center text-md-right pt-4 pt-md-0">
                     <h3 class="m-0 text-blue main-font font-weight-bold"><span class="text-orange">[</span>arifdwipurwanto@gmail.com<span class="text-orange">]</span></h3>
                 </div>
             </div>
