style: image for portfolio 1-3

--- a/index.html
+++ b/index.html
@@ -697,9 +697,9 @@
                         <!-- Item 1 -->
                         <div class="item">
                             <div class="team-data-img">
-                                <a href="personal-hotspot/images/portfolio-img-1.jpg" data-fancybox="images">
+                                <a href="personal-hotspot/images/online-shop.png" data-fancybox="images">
                                 <div class="single-work">
-                                    <img src="personal-hotspot/images/portfolio-img-1.jpg" alt="team" class="img-responsive" data-no-retina>
+                                    <img src="personal-hotspot/images/online-shop.png" alt="team" class="img-responsive" data-no-retina>
                                     <div class="overlay-text center-block">
                                         <div class="cases-image-inner">
                                             <span class="cases-line top"></span>
@@ -720,9 +720,9 @@
                         <!-- Item 2 -->
                         <div class="item">
                             <div class="team-data-img">
-                                <a href="personal-hotspot/images/portfolio-img-2.jpg" data-fancybox="images">
+                                <a href="personal-hotspot/images/warehouse-management-system.png" data-fancybox="images">
                                 <div class="single-work">
-                                    <img src="personal-hotspot/images/portfolio-img-2.jpg" alt="team" class="img-responsive" data-no-retina>
+                                    <img src="personal-hotspot/images/warehouse-management-system.png" alt="team" class="img-responsive" data-no-retina>
                                     <div class="overlay-text center-block">
                                         <div class="cases-image-inner">
                                             <span class="cases-line top"></span>
@@ -743,9 +743,9 @@
                         <!-- Item 3 -->
                         <div class="item">
                             <div class="team-data-img">
-                                <a href="personal-hotspot/images/portfolio-img-3.jpg" data-fancybox="images">
+                                <a href="personal-hotspot/images/high-school-financial-management.png" data-fancybox="images">
                                 <div class="single-work">
-                                    <img src="personal-hotspot/images/portfolio-img-3.jpg" alt="team" class="img-responsive" data-no-retina>
+                                    <img src="personal-hotspot/images/high-school-financial-management.png" alt="team" class="img-responsive" data-no-retina>
                                     <div class="overlay-text center-block">
                                         <div class="cases-image-inner">
                                             <span class="cases-line top"></span>
